corrected navbar collapse and show features

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -29,6 +29,7 @@ a::hover {
 .nav-item {
   font-family: 'Open Sans Condensed', sans-serif;
   color: darkslategray;
+  line-height: 1;
 }
 
 .navbar {
